--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ darwin, linux, windows ]
-        arch: [ amd64, arm64 ]
+        os: [  linux ]
+        arch: [ amd64 ]
         go: [ '1.18' ]
         exclude:
           # windows excludes
@@ -37,33 +37,10 @@ jobs:
             runs-on: windows-latest
 
     steps:
-      - name: Checkout scm
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go }}
-          cache: false
-
-      - name: Get GOPATH
-        id: get-gopath
+      - name: list version
         shell: bash
         run: |
-          echo "GOPATH=${GOPATH}"
-          echo "PATH=${PATH}"
-          echo ==
-          GOPATH=$(go env GOPATH)
-          PATH=$PATH:"${GOPATH}/bin"
-          echo ==          
-          echo "GOPATH=${GOPATH}"
-          echo "PATH=${PATH}" 
-
-      - name: print
-        shell: bash
-        run: |
-          echo ==          
-          echo "GOPATH=${GOPATH}"
-          echo "PATH=${PATH}" 
-          echo "GOPATH: %GOPATH%"
-          echo "PATH: %PATH%"
+          sudo apt-get update
+          sudo apt-get list -a qemu-user-static
+          
+           
