--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
 #            arch: arm64
 #            runs-on: macos-latest
           - os: linux
-            runs-on: ubuntu-latest
+            runs-on: ubuntu-22.04
 #          - os: windows
 #            runs-on: windows-latest
 
